--- a/springStarterProject/src/main/resources/application.properties
+++ b/springStarterProject/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Database related properties
 database.driverClass=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/TestSpring
-database.username=vishal
-database.password=vishal
+database.username=preemynence
+database.password=preemynence
 
 #Hibernate related properties
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
